--- a/package.json
+++ b/package.json
@@ -18,10 +18,23 @@
     "morgan": "^1.9.1",
     "spectron": "^5.0.0"
   },
+  "ava": {
+    "babel": {
+      "testOptions": {
+        "presets": [
+          "@babel/preset-env"
+        ]
+      }
+    },
+    "require": [
+      "@babel/polyfill",
+      "@babel/register"
+    ]
+  },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
+    "@babel/register": "^7.0.0",
     "ava": "^1.0.1"
   }
 }
